# JuniaEditor

./: .editorconfig  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  CreateAndOpenProject.bat
src/: Editor.cpp  Editor.hpp
